--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "fabric-loom" version "1.4-SNAPSHOT"
+	id "fabric-loom" version "1.6-SNAPSHOT"
 	id "maven-publish"
 	id "com.matthewprenger.cursegradle" version "1.4.0"
 	id "com.modrinth.minotaur" version "2.+"
@@ -21,7 +21,11 @@ repositories {
 
 	// WTHIT
 	maven {
-		url "https://maven.bai.lol"
+		url "https://maven2.bai.lol"
+		content {
+			includeGroup "lol.bai"
+			includeGroup "mcp.mobius.waila"
+		}
 	}
 }
 
@@ -57,7 +61,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
@@ -66,8 +70,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
@@ -79,7 +83,8 @@ jar {
 // configure the maven publication
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
+		create("mavenJava", MavenPublication) {
+			artifactId = project.archives_base_name
 			from components.java
 		}
 	}
@@ -110,11 +115,8 @@ curseforge {
 		changelog = "[v${project.version}](https://github.com/Aton-Kish/your-reputation/releases/tag/v" + java.net.URLEncoder.encode(project.version, "UTF-8") + ")"
 
 		addGameVersion "Fabric"
-		addGameVersion "Java 17"
-		addGameVersion "1.20.1"
-		addGameVersion "1.20.2"
-		addGameVersion "1.20.3"
-		addGameVersion "1.20.4"
+		addGameVersion "Java 21"
+		addGameVersion "1.21"
 
 		relations {
 			requiredDependency "fabric-api"
@@ -134,7 +136,7 @@ modrinth {
 	versionType = "release"
 	changelog = "[v${project.version}](https://github.com/Aton-Kish/your-reputation/releases/tag/v" + java.net.URLEncoder.encode(project.version, "UTF-8") + ")"
 
-	gameVersions = ["1.20.1", "1.20.2", "1.20.3", "1.20.4"]
+	gameVersions = ["1.21"]
 	loaders = ["fabric"]
 
 	dependencies {
