--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,20 @@ org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.4
-	yarn_mappings=1.20.4+build.1
-	loader_version=0.15.1
+	minecraft_version=1.21
+	yarn_mappings=1.21+build.2
+	loader_version=0.15.11
 
 # Mod Properties
-	mod_version=0.2.5+wthit.1.20
+	mod_version=0.2.6+wthit.1.21
 	mod_id=reputation
 	maven_group=atonkish.reputation
 	archives_base_name=your-reputation
 
 # Dependencies
-	fabric_version=0.91.1+1.20.4
-	wthit_version=10.0.0
+	fabric_version=0.100.1+1.21
+	wthit_version=12.1.2
 
 # Distribution platform
-	curseforge_id=579757
-	modrinth_id=MrLyhFlg
+	curseforge_id=1038047
+	modrinth_id=1uiuiEVt
